infra/cdk.out/CartApiStack.template.json
{
 "Description": "Cart API",
 "Resources": {
  "CartApiVpc84BDEB84": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/Resource"
   }
  },
  "CartApiVpcpublicSubnet1Subnet1CBD1190": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet1/Subnet"
   }
  },
  "CartApiVpcpublicSubnet1RouteTable582826F9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet1/RouteTable"
   }
  },
  "CartApiVpcpublicSubnet1RouteTableAssociationBC973D9B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CartApiVpcpublicSubnet1RouteTable582826F9"
    },
    "SubnetId": {
     "Ref": "CartApiVpcpublicSubnet1Subnet1CBD1190"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "CartApiVpcpublicSubnet1DefaultRoute7DCE6ADE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CartApiVpcIGW44B0033D"
    },
    "RouteTableId": {
     "Ref": "CartApiVpcpublicSubnet1RouteTable582826F9"
    }
   },
   "DependsOn": [
    "CartApiVpcVPCGW32FE157F"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet1/DefaultRoute"
   }
  },
  "CartApiVpcpublicSubnet1EIPC71F211B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet1/EIP"
   }
  },
  "CartApiVpcpublicSubnet1NATGateway8A1F731F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "CartApiVpcpublicSubnet1EIPC71F211B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "CartApiVpcpublicSubnet1Subnet1CBD1190"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "CartApiVpcpublicSubnet1DefaultRoute7DCE6ADE",
    "CartApiVpcpublicSubnet1RouteTableAssociationBC973D9B"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet1/NATGateway"
   }
  },
  "CartApiVpcpublicSubnet2SubnetA610DF9B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet2/Subnet"
   }
  },
  "CartApiVpcpublicSubnet2RouteTableDA7D63E9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet2/RouteTable"
   }
  },
  "CartApiVpcpublicSubnet2RouteTableAssociation121AE8C3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CartApiVpcpublicSubnet2RouteTableDA7D63E9"
    },
    "SubnetId": {
     "Ref": "CartApiVpcpublicSubnet2SubnetA610DF9B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "CartApiVpcpublicSubnet2DefaultRouteE3F46889": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CartApiVpcIGW44B0033D"
    },
    "RouteTableId": {
     "Ref": "CartApiVpcpublicSubnet2RouteTableDA7D63E9"
    }
   },
   "DependsOn": [
    "CartApiVpcVPCGW32FE157F"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/publicSubnet2/DefaultRoute"
   }
  },
  "CartApiVpcprivateSubnet1SubnetDD69FAF8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet1/Subnet"
   }
  },
  "CartApiVpcprivateSubnet1RouteTable9E698ECD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet1/RouteTable"
   }
  },
  "CartApiVpcprivateSubnet1RouteTableAssociation8D0EBC69": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CartApiVpcprivateSubnet1RouteTable9E698ECD"
    },
    "SubnetId": {
     "Ref": "CartApiVpcprivateSubnet1SubnetDD69FAF8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "CartApiVpcprivateSubnet1DefaultRouteF92E3958": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CartApiVpcpublicSubnet1NATGateway8A1F731F"
    },
    "RouteTableId": {
     "Ref": "CartApiVpcprivateSubnet1RouteTable9E698ECD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet1/DefaultRoute"
   }
  },
  "CartApiVpcprivateSubnet2Subnet98AA7B33": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet2/Subnet"
   }
  },
  "CartApiVpcprivateSubnet2RouteTable77FFE92A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet2/RouteTable"
   }
  },
  "CartApiVpcprivateSubnet2RouteTableAssociation5C71869D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CartApiVpcprivateSubnet2RouteTable77FFE92A"
    },
    "SubnetId": {
     "Ref": "CartApiVpcprivateSubnet2Subnet98AA7B33"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "CartApiVpcprivateSubnet2DefaultRouteAB6DEE7C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CartApiVpcpublicSubnet1NATGateway8A1F731F"
    },
    "RouteTableId": {
     "Ref": "CartApiVpcprivateSubnet2RouteTable77FFE92A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/privateSubnet2/DefaultRoute"
   }
  },
  "CartApiVpcisolatedSubnet1Subnet559074B5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/isolatedSubnet1/Subnet"
   }
  },
  "CartApiVpcisolatedSubnet1RouteTable5731FEED": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/isolatedSubnet1/RouteTable"
   }
  },
  "CartApiVpcisolatedSubnet1RouteTableAssociation2B53F60F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CartApiVpcisolatedSubnet1RouteTable5731FEED"
    },
    "SubnetId": {
     "Ref": "CartApiVpcisolatedSubnet1Subnet559074B5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/isolatedSubnet1/RouteTableAssociation"
   }
  },
  "CartApiVpcisolatedSubnet2Subnet1D3A0C17": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/isolatedSubnet2/Subnet"
   }
  },
  "CartApiVpcisolatedSubnet2RouteTable403C0E8B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/isolatedSubnet2/RouteTable"
   }
  },
  "CartApiVpcisolatedSubnet2RouteTableAssociation24AEA5BA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CartApiVpcisolatedSubnet2RouteTable403C0E8B"
    },
    "SubnetId": {
     "Ref": "CartApiVpcisolatedSubnet2Subnet1D3A0C17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/isolatedSubnet2/RouteTableAssociation"
   }
  },
  "CartApiVpcIGW44B0033D": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CartApiStack/CartApiVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/IGW"
   }
  },
  "CartApiVpcVPCGW32FE157F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "CartApiVpcIGW44B0033D"
    },
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiVpc/VPCGW"
   }
  },
  "LambdaSG9DBFCFB7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Cart API Lambda",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/LambdaSG/Resource"
   }
  },
  "RdsSG7A20FFA2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Cart API RDS",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "VpcId": {
     "Ref": "CartApiVpc84BDEB84"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/RdsSG/Resource"
   }
  },
  "RdsSGfromCartApiStackLambdaSGBD26A0BD54323C29BD04": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Lambda to Postgres",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "RdsSG7A20FFA2",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSG9DBFCFB7",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/RdsSG/from CartApiStackLambdaSGBD26A0BD:5432"
   }
  },
  "CartApiDbSecret3928240F": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "PasswordLength": 32,
     "SecretStringTemplate": "{\"username\":\"cartapi\"}"
    },
    "Name": "cart-api/db-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiDbSecret/Resource"
   }
  },
  "CartApiDbSecretAttachmentCCE70829": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "CartApiDbSecret3928240F"
    },
    "TargetId": {
     "Ref": "CartApiDb090BE84E"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiDbSecret/Attachment/Resource"
   }
  },
  "CartApiPG80EC91A0": {
   "Type": "AWS::RDS::DBParameterGroup",
   "Properties": {
    "Description": "Parameter group for postgres15",
    "Family": "postgres15",
    "Parameters": {
     "rds.force_ssl": "0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiPG/Resource"
   }
  },
  "CartApiDbSubnetGroupF7F3C211": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for CartApiDb database",
    "SubnetIds": [
     {
      "Ref": "CartApiVpcisolatedSubnet1Subnet559074B5"
     },
     {
      "Ref": "CartApiVpcisolatedSubnet2Subnet1D3A0C17"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiDb/SubnetGroup/Default"
   }
  },
  "CartApiDb090BE84E": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "cartapi",
    "DBParameterGroupName": {
     "Ref": "CartApiPG80EC91A0"
    },
    "DBSubnetGroupName": {
     "Ref": "CartApiDbSubnetGroupF7F3C211"
    },
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "15",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "CartApiDbSecret3928240F"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "CartApiDbSecret3928240F"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "RdsSG7A20FFA2",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiDb/Resource"
   }
  },
  "CartApiLambdaServiceRole3A94778E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "CartApiVpcprivateSubnet1DefaultRouteF92E3958",
    "CartApiVpcprivateSubnet1RouteTableAssociation8D0EBC69",
    "CartApiVpcprivateSubnet2DefaultRouteAB6DEE7C",
    "CartApiVpcprivateSubnet2RouteTableAssociation5C71869D"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiLambda/ServiceRole/Resource"
   }
  },
  "CartApiLambdaServiceRoleDefaultPolicy98FA1713": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "CartApiDbSecret3928240F"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CartApiLambdaServiceRoleDefaultPolicy98FA1713",
    "Roles": [
     {
      "Ref": "CartApiLambdaServiceRole3A94778E"
     }
    ]
   },
   "DependsOn": [
    "CartApiVpcprivateSubnet1DefaultRouteF92E3958",
    "CartApiVpcprivateSubnet1RouteTableAssociation8D0EBC69",
    "CartApiVpcprivateSubnet2DefaultRouteAB6DEE7C",
    "CartApiVpcprivateSubnet2RouteTableAssociation5C71869D"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiLambda/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "CartApiLambda8E3D9C7E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-346836576273-us-east-1",
     "S3Key": "c21159e3e73e2a566f6eab7de0713e8871db3c052856420a21e3a8f028ed1c5a.zip"
    },
    "Environment": {
     "Variables": {
      "NODE_ENV": "production",
      "DB_HOST": {
       "Fn::GetAtt": [
        "CartApiDb090BE84E",
        "Endpoint.Address"
       ]
      },
      "DB_PORT": {
       "Fn::GetAtt": [
        "CartApiDb090BE84E",
        "Endpoint.Port"
       ]
      },
      "DB_NAME": "cartapi",
      "DB_USERNAME": {
       "Fn::Join": [
        "",
        [
         "{{resolve:secretsmanager:",
         {
          "Ref": "CartApiDbSecret3928240F"
         },
         ":SecretString:username::}}"
        ]
       ]
      },
      "DB_PASSWORD": {
       "Fn::Join": [
        "",
        [
         "{{resolve:secretsmanager:",
         {
          "Ref": "CartApiDbSecret3928240F"
         },
         ":SecretString:password::}}"
        ]
       ]
      },
      "AUTH_USERNAME": "AbrahamMunguia",
      "AUTH_PASSWORD": "Test1237"
     }
    },
    "Handler": "index.handler",
    "MemorySize": 512,
    "Role": {
     "Fn::GetAtt": [
      "CartApiLambdaServiceRole3A94778E",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Timeout": 30,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "LambdaSG9DBFCFB7",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "CartApiVpcprivateSubnet1SubnetDD69FAF8"
      },
      {
       "Ref": "CartApiVpcprivateSubnet2Subnet98AA7B33"
      }
     ]
    }
   },
   "DependsOn": [
    "CartApiLambdaServiceRoleDefaultPolicy98FA1713",
    "CartApiLambdaServiceRole3A94778E",
    "CartApiVpcprivateSubnet1DefaultRouteF92E3958",
    "CartApiVpcprivateSubnet1RouteTableAssociation8D0EBC69",
    "CartApiVpcprivateSubnet2DefaultRouteAB6DEE7C",
    "CartApiVpcprivateSubnet2RouteTableAssociation5C71869D"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiLambda/Resource",
    "aws:asset:path": "asset.c21159e3e73e2a566f6eab7de0713e8871db3c052856420a21e3a8f028ed1c5a",
    "aws:asset:is-bundled": true,
    "aws:asset:property": "Code"
   }
  },
  "CartApiGateway41E6C4C4": {
   "Type": "AWS::ApiGateway::RestApi",
   "Properties": {
    "Description": "Cart API – NestJS on Lambda",
    "Name": "cart-api"
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Resource"
   }
  },
  "CartApiGatewayCloudWatchRoleFF90F9F2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "apigateway.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
       ]
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/CloudWatchRole/Resource"
   }
  },
  "CartApiGatewayAccountFDAA00F7": {
   "Type": "AWS::ApiGateway::Account",
   "Properties": {
    "CloudWatchRoleArn": {
     "Fn::GetAtt": [
      "CartApiGatewayCloudWatchRoleFF90F9F2",
      "Arn"
     ]
    }
   },
   "DependsOn": [
    "CartApiGateway41E6C4C4"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Account"
   }
  },
  "CartApiGatewayDeploymentDA5AA1A7dd37143e5b2bf79ece4c1884ef95b15d": {
   "Type": "AWS::ApiGateway::Deployment",
   "Properties": {
    "Description": "Cart API – NestJS on Lambda",
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    }
   },
   "DependsOn": [
    "CartApiGatewayproxyANY4FE24435",
    "CartApiGatewayproxyOPTIONS8CCA1A7C",
    "CartApiGatewayproxy16B32D76",
    "CartApiGatewayANY00052314",
    "CartApiGatewayOPTIONSE3F5F706"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Deployment/Resource",
    "aws:cdk:do-not-refactor": true
   }
  },
  "CartApiGatewayDeploymentStageprod26C8C7D6": {
   "Type": "AWS::ApiGateway::Stage",
   "Properties": {
    "DeploymentId": {
     "Ref": "CartApiGatewayDeploymentDA5AA1A7dd37143e5b2bf79ece4c1884ef95b15d"
    },
    "MethodSettings": [
     {
      "DataTraceEnabled": true,
      "HttpMethod": "*",
      "LoggingLevel": "INFO",
      "ResourcePath": "/*"
     }
    ],
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    },
    "StageName": "prod"
   },
   "DependsOn": [
    "CartApiGatewayAccountFDAA00F7"
   ],
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/DeploymentStage.prod/Resource"
   }
  },
  "CartApiGatewayOPTIONSE3F5F706": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": false,
    "AuthorizationType": "NONE",
    "HttpMethod": "OPTIONS",
    "Integration": {
     "IntegrationResponses": [
      {
       "ResponseParameters": {
        "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization'",
        "method.response.header.Access-Control-Allow-Origin": "'*'",
        "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'"
       },
       "StatusCode": "204"
      }
     ],
     "RequestTemplates": {
      "application/json": "{ statusCode: 200 }"
     },
     "Type": "MOCK"
    },
    "MethodResponses": [
     {
      "ResponseParameters": {
       "method.response.header.Access-Control-Allow-Headers": true,
       "method.response.header.Access-Control-Allow-Origin": true,
       "method.response.header.Access-Control-Allow-Methods": true
      },
      "StatusCode": "204"
     }
    ],
    "ResourceId": {
     "Fn::GetAtt": [
      "CartApiGateway41E6C4C4",
      "RootResourceId"
     ]
    },
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/OPTIONS/Resource"
   }
  },
  "CartApiGatewayANYApiPermissionCartApiStackCartApiGateway05BB8C40ANYCCB6E672": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CartApiLambda8E3D9C7E",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-1:346836576273:",
       {
        "Ref": "CartApiGateway41E6C4C4"
       },
       "/",
       {
        "Ref": "CartApiGatewayDeploymentStageprod26C8C7D6"
       },
       "/*/"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/ANY/ApiPermission.CartApiStackCartApiGateway05BB8C40.ANY.."
   }
  },
  "CartApiGatewayANYApiPermissionTestCartApiStackCartApiGateway05BB8C40ANY9F70E6A9": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CartApiLambda8E3D9C7E",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-1:346836576273:",
       {
        "Ref": "CartApiGateway41E6C4C4"
       },
       "/test-invoke-stage/*/"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/ANY/ApiPermission.Test.CartApiStackCartApiGateway05BB8C40.ANY.."
   }
  },
  "CartApiGatewayANY00052314": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "ANY",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":apigateway:us-east-1:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "CartApiLambda8E3D9C7E",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Fn::GetAtt": [
      "CartApiGateway41E6C4C4",
      "RootResourceId"
     ]
    },
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/ANY/Resource"
   }
  },
  "CartApiGatewayproxy16B32D76": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Fn::GetAtt": [
      "CartApiGateway41E6C4C4",
      "RootResourceId"
     ]
    },
    "PathPart": "{proxy+}",
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/{proxy+}/Resource"
   }
  },
  "CartApiGatewayproxyOPTIONS8CCA1A7C": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": false,
    "AuthorizationType": "NONE",
    "HttpMethod": "OPTIONS",
    "Integration": {
     "IntegrationResponses": [
      {
       "ResponseParameters": {
        "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization'",
        "method.response.header.Access-Control-Allow-Origin": "'*'",
        "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'"
       },
       "StatusCode": "204"
      }
     ],
     "RequestTemplates": {
      "application/json": "{ statusCode: 200 }"
     },
     "Type": "MOCK"
    },
    "MethodResponses": [
     {
      "ResponseParameters": {
       "method.response.header.Access-Control-Allow-Headers": true,
       "method.response.header.Access-Control-Allow-Origin": true,
       "method.response.header.Access-Control-Allow-Methods": true
      },
      "StatusCode": "204"
     }
    ],
    "ResourceId": {
     "Ref": "CartApiGatewayproxy16B32D76"
    },
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/{proxy+}/OPTIONS/Resource"
   }
  },
  "CartApiGatewayproxyANYApiPermissionCartApiStackCartApiGateway05BB8C40ANYproxy94D9EADB": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CartApiLambda8E3D9C7E",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-1:346836576273:",
       {
        "Ref": "CartApiGateway41E6C4C4"
       },
       "/",
       {
        "Ref": "CartApiGatewayDeploymentStageprod26C8C7D6"
       },
       "/*/*"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/{proxy+}/ANY/ApiPermission.CartApiStackCartApiGateway05BB8C40.ANY..{proxy+}"
   }
  },
  "CartApiGatewayproxyANYApiPermissionTestCartApiStackCartApiGateway05BB8C40ANYproxyD7ED7614": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CartApiLambda8E3D9C7E",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-1:346836576273:",
       {
        "Ref": "CartApiGateway41E6C4C4"
       },
       "/test-invoke-stage/*/*"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/{proxy+}/ANY/ApiPermission.Test.CartApiStackCartApiGateway05BB8C40.ANY..{proxy+}"
   }
  },
  "CartApiGatewayproxyANY4FE24435": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "ANY",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":apigateway:us-east-1:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "CartApiLambda8E3D9C7E",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Ref": "CartApiGatewayproxy16B32D76"
    },
    "RestApiId": {
     "Ref": "CartApiGateway41E6C4C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CartApiGateway/Default/{proxy+}/ANY/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SQW7jMAx8S++Kdpum2LOTbIMc2hp20WtAy6yrxJYMkWoQGP77QrJjBy2wpxkORyRFaSmXj3/k7zs400KVp0WtC9nlDOok4EyHDtVSdu+tEpsP855uROqLWqvcFwY5aDPLrGd8g6LGWZ+1hMgqDaytmcyB/N2nAV6Ad8B4hotInf4Cxrnw3jA6g5NhmGSMEmZQnw0aFjkq7zRfds76Ns7wX2FvKodEvSBUDpkaMFChk10e49Ef2ABv4Crkm36T4XumF64k2aXgoEFGN/Xfrr9pW2AogHBviMEoFMOtbw78EK7WXtTQFCUcjC3xSPIlwpM3Ku5YQyO7zA6PETG1tVZxewPrBT0cgAiZZBJA0INce3VCXgPhWF52mw8zVQ2H0TWaSFvTC2h1NTyD7DIkTlod2800Ucp6w2KLbW0v17XdRDlDNXyYSDIk653COMEz8qctQ3Jk1 [...]
   },
   "Metadata": {
    "aws:cdk:path": "CartApiStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "CartApiGatewayEndpoint46469811": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "CartApiGateway41E6C4C4"
      },
      ".execute-api.us-east-1.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "CartApiGatewayDeploymentStageprod26C8C7D6"
      },
      "/"
     ]
    ]
   }
  },
  "ApiUrl": {
   "Description": "API Gateway URL",
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "CartApiGateway41E6C4C4"
      },
      ".execute-api.us-east-1.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "CartApiGatewayDeploymentStageprod26C8C7D6"
      },
      "/"
     ]
    ]
   }
  },
  "DbEndpoint": {
   "Description": "RDS Postgres endpoint",
   "Value": {
    "Fn::GetAtt": [
     "CartApiDb090BE84E",
     "Endpoint.Address"
    ]
   }
  },
  "DbSecretArn": {
   "Description": "Secrets Manager ARN for DB credentials",
   "Value": {
    "Ref": "CartApiDbSecret3928240F"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
